articlestyle.css
/* The CSS for the main layout*/
* {
	box-sizing: border-box;
}
body {
	max-width: 95%;
	margin: auto;
	background-color: DarkSlateGray;
}
a {
	text-decoration: inherit;
	color: DeepSkyBlue;
}

/*---------Mobile----------*/

@media only screen and (max-width: 768px) {
.logobox {
	width: 100%;
	border: outset #222;
	border-radius: 10px;
	height: 70px;
	margin-bottom: 10px;
	margin-top: 1%;
	background-color: #222;
	color: white;
}
.topnav {
	display: none;
}
.sidebar { /* TODO: make this show up as an overlay when you hit a button */
	display: none;
}
.mainright {
	width: 100%;
	border: solid;
	border-radius: 10px;
	padding: 0 10px;
	background-color: white;
}
}

/*---------Desktop---------*/

@media only screen and (min-width: 768px) { /* <Desktop> */
body {
	max-width: 90%;
}
/* The big dividers */
.logobox {
	width: 32%;
	float: left;
	border: outset #222;
	border-radius: 10px;
	height: 70px; /* keeping this and topnav the same height keeps things from getting misaligned */
	margin-right: 1%;
	margin-bottom: 1%;
	margin-top: 1%;
	background-color: #222;
	color: white;
}
.topnav {
	width: 67%;
	border: outset #222;
	border-radius: 10px;
	float: left;
	background-color: #222;
	height: 70px;
	margin-bottom: 1%;
	margin-top: 1%;
}
.sidebar { /* sidebar */
	width: 32%;
	float: left;
	border: double;
	margin-right: 1%;
	padding: 0;
	background-color: white;
}
.mainright { /* Main content */
	width: 67%;
	float: left;
	border: double;
	padding: 0 10px;
	background-color: white;
}
/* Main text classes */
.path { /* The "Windows > Users > Add/Remove" thingie */
	width: 100%;
	font-family: Oxanium;
	font-weight: normal;
	text-decoration: none;
	color: gray;
}



/* Topnav classes */
.headerbar{
	list-style-type: none;
	margin: 0px;
}
.headeritem{
	float: right; /* right-aligns but reverses order */
	display: block;
	color: white;
	padding: 16px 16px;
	text-align: center;
	text-decoration: none; /* Makes the link underline not show */
	font-family: Oxanium;
	font-size: 1.6rem;
	border-radius: 10px;
}
.headeritem:hover {
	background-color: #000;
}
} /* </Desktop> */

